common/src/main/java/com/example/petfinderremake/common/domain/result/error/Error.kt
package com.example.petfinderremake.common.domain.result.error

sealed interface Error
